New default GameMode blueprint and settings fixes

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,14 +6,16 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
 LocalMapOptions=
-TransitionMap=
+TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
-ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Script/FPS_UI_Demo.FPS_UI_DemoGameMode
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/BP_Demo_GameMode.BP_Demo_GameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
@@ -31,6 +33,7 @@ r.SkinCache.CompileShaders=True
 r.RayTracing=True
 
 r.Shadow.Virtual.Enable=1
+r.DefaultFeature.MotionBlur=False
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -47,6 +50,7 @@ DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonProjectile",NewClassName="FPS_UI_DemoProjectile")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="FPS_UI_DemoGameMode")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonCharacter",NewClassName="FPS_UI_DemoCharacter")
+MinDesiredFrameRate=30.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
