New settings saving system and functional master volume

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,7 +12,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/BP_UI_Demo_Game_Instance.BP_UI_Demo_Game_Instance_C
 GameDefaultMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/BP_Demo_GameMode.BP_Demo_GameMode_C
@@ -65,4 +65,9 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/Engine.AudioSettings]
+DefaultSoundClassName=/Game/Sound/Master.Master
+DefaultMediaSoundClassName=/Game/Sound/Master.Master
+DefaultBaseSoundMix=/Game/Sound/MasterSoundMixClass.MasterSoundMixClass
 
